# simavr

./: .gitignore
simavr/: CMakeLists.txt  sim_core_config.h  sim_core_decl.h
simavr/cores/: sim_core_declare.h  sim_tiny4313.c
simavr/sim/: avr_ioport.c  sim_mcu_structs.h
tests/: Makefile  attiny4313_port.c
